src/objects/vlocity_ins__ObjectLayout__c.object
<CustomObject>
    <description>Represents the workspace layout for a given object or object type.</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this object layout. Used to identify the object layout across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique object layout identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectClassId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vlocity Object Class</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Vlocity Object Layouts</relationshipLabel>
        <relationshipName>VlocityObjectLayouts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubclassId__c</fullName>
        <label>Subclass</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Object Layout</label>
    <nameField>
        <label>Object Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>